# gqtc-market-making

./: .gitignore  README.md  demo.ipynb  requirements.txt
mm/: as_bnb.py  as_xrp.py  example_data.py  example_optimizer.py  gtqb_usdc_usdt.py  gtqb_xrp_optim.py
mm/mmbt/: __init__.py  asset.py  charts.py  logger.py  metrics.py  optimizer.py  order_logger.py  progress.py  recorder.py  runner.py  saver.py
mm/mmbt/algorithms/: __init__.py  as_algo.py  base_algo.py  gtqb_algo.py  obi_algo.py
mm/mmbt/algorithms/signals/: __init__.py  base_signal.py  obi_signal.py
mm/mmbt/optimizer/: __init__.py  bayesian.py  cv.py  results.py
qb/: dashboard.py  event_publisher.py  exchanges.py  quant_bot.py
qb/src/: CMakeLists.txt  tracker.cpp  tracker.h  tracker_pybind.sh  tracker_pybind_mac.sh
